fixed top padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ body {
   display: block;
   font-size: 6.25rem;
   color: white;
-  padding-top: 50%;
 }
 
 .intro-scroll-down{
@@ -50,7 +49,7 @@ section{
   flex-direction: column;
   align-items: center;
   min-height: 400px;
-  padding: 100px 0px;
+  padding: 70px 0px;
 }
 
 .NavBar{
